mainstyle.css
html{
    scroll-behavior: smooth;
}

body{
    background-color: #0D1821;
/*    background-image: url(img/IMG_6026.JPG);
    background-position: -600px 0;
    background-size: 2000px 1500px;*/
    font-family: "Roboto", monospace;
/*    cursor: url(img/winCursor.png), auto;*/
    overflow-x: hidden;
    position: relative;
}

::selection{
    background-color: #fc6c28;
}

audio{
    display: block;
    width: 90%;
    margin: auto;
    padding-bottom: 15px;
}
audio:focus{
    outline: none;
}
a{
    text-decoration: none;
    transition: color 150ms;
}
a:link{
    color: #BFCC94;
}
a:visited{
    color: #BFCC94;
}
a:hover{
    color: #fc6c28;
}
#mainDiv{
    display: block;
    margin: auto;
    width: 680px;
    padding: 10px;
    overflow: auto;
    min-height: 1300px;
    overflow-x: hidden;
    overflow-y: hidden;
}
#sideDivL{
    display: block;
    position: absolute;
    z-index: -1;
    left: -60px;
    top: 0;
    width: 480px;
    height: 100%;
    padding: 0;
    background-image:url("/img/backgroundSides.png");
    background-repeat: repeat-y;
    opacity: 0.2;
}
#sideDivR{
    display: block;
    position: absolute;
    z-index: -1;
    right: -60px;
    top: 0;
    width: 480px;
    height: 100%;
    padding: 0;
    background-image:url("/img/backgroundSides.png");
    background-repeat: repeat-y;
    opacity: 0.2;
    
    -moz-transform: scaleX(-1);
    -o-transform: scaleX(-1);
    -webkit-transform: scaleX(-1);
    transform: scaleX(-1);
}
.subheading{
    font-size: 15pt;
    text-align: center;
    padding: 0;
    margin: 0;
    line-height: 0;
}
#main-subheading{
    display: block;
    text-align: center;
    width: 90%;
    margin: auto;
    padding: 10px;
    color: #B4CDED;
}
footer{
    padding: 2em;
    text-align: center;
    font-family: inherit;
    z-index: -3;
    height: auto;
}
button{
    display: block;
    width: 50%;
    height: 30px;
    margin: auto;
    font-family: Roboto, monospace;
    font-size: 15pt;
    font-weight: normal;
    background-color: #fc6c28;
    border-radius: 6px;
    border: none;
    color: white;
    margin-top: 10px;
}
button:hover{
    background-color: #B4CDED;
}
p{
    color: white;
    padding: 5px;
    line-height: 1.5em;
    font-family:inherit;
    font-size: 13pt;
    margin: auto;
    margin-bottom: 20px;
    width: 95%;
}
li{
    color: white;
    padding: 5px;
    line-height: 1.5em;
    font-family: Roboto, monospace;
    font-size: 13pt;
    margin: auto;
    margin-bottom: 20px;
    width: 95%;
}
h2{
    color: #B4CDED;
    padding: 10px;
    font-family:monospace;
    font-size: 40pt;
    text-align: center;
    margin: auto;
    margin-bottom: 30px;
    width: 480px;
}
h1{
    color: #B4CDED;
    padding-top: 40px;
    padding-bottom: 10px;
    padding-right: 0;
    padding-left: 0;
    font-family: monospace;
    font-size: 50pt;
/*    border-style:dashed;
    border-color: darkgray;*/
    text-align: center;
    margin: auto;
    border-radius: 40px;
    width: 580px;
    line-height: 30pt;
}
.projItem{
    overflow: none;
    background-color: #0D1821;
    padding: 5px;
    height: 100%;
    margin: 0;
    overflow: none;
    position: relative;
}
.gridParent{
    display: grid;
    width: 100%;
    margin: auto;
    grid-template-columns: repeat(3, minmax(200px, 1fr));
    grid-template-rows: repeat(3, minmax(100px, 170px));
    grid-gap: 0px;
    grid-row-gap: 10px;
    overflow: none;
    margin-bottom: 10px;
}
.projItemImg{
/*    max-width: 100%;
    max-height: 100%;
    min-width: 100%;
    min-height: 100%;*/
    width: 100%;
    height: 100%;
    overflow: hidden;
    min-height: 0;
    display: inline-block;
    outline-color: white;
    outline-width: thin;
    box-shadow: 2px 3px 3px 1px #050c11;
    overflow: none;
    transition: opacity 0.4s ease-out;
}
.projItemImg:hover{
    opacity: 0.7;
}

.platformOverlay{
    display: block;
    position: absolute;
    overflow: hidden;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    pointer-events: none;
    color: white;
    padding: 70px 0;
    text-align: center;
    font-size: 20pt;
    opacity: 0;
    transition: opacity 0.1s linear;
}

.contextImage:hover~ .platformOverlay{
    opacity: 1;
}

.pOverlayParent{
    position: relative;
}

#itchContainer{
    width: 90%;
    margin: auto;
}
.content{
    width: 100%;
    max-height: 0;
    margin: auto;
    padding: 0;
    overflow: hidden;
    text-align: justify;
    background-color: rgba(100,100,100,0.2);
    border-radius: 10px;
/*    transition: max-height 0.2s ease-out;*/
}

.gif{
    display: block;
    border: solid 3px #004a6a;
    width: 320px;
    margin: auto;
}

.audioCaption{
    font-size: 10pt;
    padding: 0;
    width: 30%;
    margin: auto;
    text-align: center;
}

#waterGif{
    width: 95%;
    height: auto;
    border: none;
    box-shadow: 2px 3px 3px 1px #050c11;
}

#rootGif{
    width: 70%;
    height: auto;
    border: none;
    box-shadow: 2px 3px 3px 1px #050c11;
}
iframe{
    display: block;
    margin: auto;
}
.procGenImg{
    display: block;
    width: 100%;
    height: auto;
    margin: auto;
    box-shadow: 2px 3px 3px 1px #050c11;
}
.ninetyPercImg{
    display: block;
    width: 90%;
    height: auto;
    margin: auto;
    box-shadow: 2px 3px 3px 1px #050c11;
}
#pcCompareParent{
    display: grid;
    position: relative;
    width: 98%;
    margin: auto;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: auto;
    grid-gap: 5px;
    overflow: none;
}
.subImg{
    display: block;
    width: 100%;
    height: auto;
    margin: auto;
    box-shadow: 2px 3px 3px 1px #050c11;
}
.expandable{
    cursor: zoom-in;
}

.sideBySideParent{
    display: grid;
    width: 90%;
    margin: auto;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: auto;
    grid-gap: 0px;
    overflow: hidden;
}
.topBottomParent{
    display: grid;
    width: 90%;
    margin: auto;
    grid-template-columns: auto;
    grid-template-rows: repeat(2, 540px);
    grid-gap: 0px;
    overflow: hidden;
}
.pageSeperator{
    background-color: #B4CDED;
    height:2px;
    width: 100%;
    border-radius: 10px;
    box-shadow: 2px 3px 3px 1px #050c11;
    margin-bottom: 10px;
    margin-top: 15px;
}
.collapsible{
    max-height: 100%;
    max-width: 100%;
}

.icon{
    display: block;
    color: aliceblue;
    background-color: none;
    width: 100px;
    margin: auto;
    font-size: 50px;
}

.emphasis{
    font-weight: 600;
    text-align: center;
    font-size: 17pt;
    border-radius: 10px;
    box-shadow: 2px 3px 3px 1px #050c11;
    background-color: #fc6c28;
}

.emphasis a:hover{
    color: #050c11;
}

#yonderThumb:hover{
    content: url(img/yondergif2.gif);
}
#balanceThumb:hover{
    content: url(img/Balancegif.gif);
}
#waterThumb:hover{
    content: url(img/glassGyroSync2.gif);
    white-space: nowrap;
}
#rootThumb:hover{
    content: url(img/rootgif1.gif);
    white-space: nowrap;
}
#fpsThumb:hover{
    content: url(img/shootergif3v3.gif);
    white-space: nowrap;
}

#openToggleButton{
    width: 60px;
    height: 60px;
    margin: auto;
    display: block;
    background-color: black;
    border: none;
}

#openToggleButton:focus{
    outline: none;
}

#characterSheet{
    transition: max-height 0.2s linear;
}

#img-popup{
    position: fixed;
    left: 0;
    top: 0;
    display: block;
    width: 100%;
    height: 100%;
    padding: 0;
    margin: 0;
    max-height: 0;
    background-color: rgba(0,0,0,0.6);
}

#img-popup-img{
    display: block;
    top: 50%;
    max-height: inherit;
    position: relative;
    width: 70%;
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);
    height: auto;
    margin: auto;
    box-shadow: none;
    padding: 20px;
    object-fit: contain;
    transition: max-height 0.05s ease-in;
}
#img-popup-img:hover{
    opacity: 1;
    box-shadow: none;
    cursor: zoom-out;
}

#balanceButton{
    
}

#contact-form{
    
}
#contact-title{
    padding-top: 20px;
    padding-bottom: 20px;
    font-size: 25pt;
}
form{
    display: grid;
    grid-gap: 10px;
    box-shadow: 2px 3px 3px 1px #050c11;
    padding: 10px;
    border-radius: 10px;
    background-color: rgba(0,0,0,0.3);
    color: white;
}
textarea{
    resize: none;
    width: 95%;
    margin: auto;
    border: none;
    border-radius: 5px;
    background-color: #344966;
    height: 10em;
    font: inherit;
    box-shadow: 1px 1px 3px 1px #050c11;
    color: inherit;
    padding: 5px;
    font-size: 13pt;
}
input{
    margin: auto;
    width: 95%;
    border-radius: 5px;
    border: none;
    box-shadow: 1px 1px 3px 1px #050c11;
    background-color: #344966;
    height: 2em;
    color: white;
    padding: 5px;
    font-size: 16pt;
}
::placeholder{
    color: white;
}
input:focus, textarea:focus{
    outline: none;
    background-color: #0D1821;
}
input:hover, textarea:hover{
    background-color: #0D1821;
}
input, textarea{
    transition: background-color 0.1s linear;
}
input[type="submit"]{
    height: 2em;
    width: 95%;
    background-color: #B4CDED;
    color: #0D1821;
}
input[type="submit"]:hover{
    background-color: white;
}

.text-dark{
    color: #050c11; 
}

.spacer{
    padding: 3px 0;
}

@media screen and (max-width:900px){
    #sideDivR{
        display: none;
    }
    #sideDivL{
        display: none;
    }
}

@media screen and (max-width:800px){
    #mainDiv{
        width: 400px;
        overflow-x: hidden;
    }
    .gridParent{
        grid-template-columns: repeat(2, minmax(200px, 1fr));
        grid-template-rows: repeat(6, minmax(100px, 170px));
    }
    
    h1{
        font-size: 40pt;
/*        border-style:dashed;
        border-color: darkgray;*/
        line-height: 1;
        text-align: center;
        margin: auto;
        padding-bottom: 0;
        width: 100%;
        
    }
    
    #main-subheading{
        display: block;
        text-align: center;
        width: 90%;
        margin: auto;
        padding: 10px;
        color: #B4CDED;
    }
    
    h2{
        color: #B4CDED;
        padding: 5px;
        font-family:monospace;
        font-size: 40pt;
        text-align: center;
        margin: auto;
        margin-bottom: 10px;
        width: 90%;
    }

    .youtube-embed{
        width: 350px;
        height: 215px;
    }
    
    .topBottomParent{
        display: grid;
        width: 90%;
        margin: auto;
        grid-template-columns: auto;
        grid-template-rows: repeat(2, 320px);
        grid-gap: 0px;
        overflow: hidden;
    }
}

